tests/positive/multiple_repeat.rms
REPEAT(3,
    @"hello",
    VARCHAR("A-Z", 1, 2)
    
)