tests/negative/test_more.rms
VARCHAR("A-Z", 3, ORE)